security/network-policies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: simple-app-prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
